# 02562_raytracer

./: .gitignore  Cargo.toml  README.md  build.py  build.rs  index.html
blend/: worksheet10_0a.blend  worksheet10_0b.blend  worksheet10_0c.blend  worksheet10_2.blend  worksheet10_3.blend  worksheet11_0b.blend1  worksheet11_0c.blend1  worksheet11_1.blend  worksheet11_1.blend1
journal/: book.toml
journal/src/: SUMMARY.md  benchmark.md  bibliography.bib  introduction.md  project.md  worksheet_1.md  worksheet_10.md  worksheet_2.md  worksheet_3.md  worksheet_4.md  worksheet_4_extra.md  worksheet_5.md  worksheet_6.md  worksheet_7.md  worksheet_8.md  worksheet_9.md
js/bsp_tree/: BspRunner.js  BspTree.js  BspTree_interleaved.js  index.html  index2.html
res/models/: dragon.mtl
res/shaders/: aabb.wgsl  bsp.wgsl  bvh.wgsl  project.wgsl  shader.wgsl  w1e1.wgsl  w1e2.wgsl  w1e3.wgsl  w1e4.wgsl  w1e5.wgsl  w1e6.wgsl  w2e1.wgsl  w2e2.wgsl  w2e3.wgsl  w2e4.wgsl  w2e5.wgsl  w3e1.wgsl  w3e2.wgsl  w3e3.wgsl  w3e4.wgsl  w5e2.wgsl  w5e3.wgsl  w5e4.wgsl  w5e5.wgsl  w6e1.wgsl  w6e2.wgsl  w6e3.wgsl  w7e1.wgsl  w7e2.wgsl  w7e3.wgsl  w8e1.wgsl  w8e2.wgsl  w8e3.wgsl  w9e1.wgsl  w9e2.wgsl  w9e3.wgsl  week2.wgsl  worksheet2.wgsl  worksheet3.wgsl
src/: camera.rs  command.rs  control_panel.rs  gpu_handles.rs  lib.rs  main.rs  mesh.rs  render_state.rs  scenes.rs  shader.wgsl  state.rs  texture.rs  tools.rs  uniform.rs
src/bindings/: bsp_tree.rs  bvh.rs  mesh.rs  mod.rs  storage_mesh.rs  texture.rs  uniform.rs  vertex.rs
src/camera/: mod.rs
src/data/: mod.rs
src/data_structures/: bvh.rs  (+7 more)
(+2 files in other folders)
