[package]
name = "raytracer"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[profile.dev]
incremental = true

[profile.release]
incremental = true

[dependencies]
cfg-if = "1"
pollster = "0.3"
winit = "0.28"
env_logger = "0.10"
log = "0.4"
wgpu = "0.17"
cgmath = "0.18"
bytemuck = { version = "1.12", features = [ "derive" ] }
egui = "0.22"
egui_winit_platform = "0.19.0"
egui_wgpu_backend = "0.25.0"
crossbeam-channel = "0.5.8"
rfd = "0.12.0"
obj = "0.10.2"
anyhow = "1.0.75"
rand = "0.8.5"
tobj = "4.0.0"
static_assertions = "1.1.0"
strum = "0.25.0"
strum_macros = "0.25.3"
rand_pcg = "0.3.1"
rdst = "0.20.11"


[dependencies.image]
version = "0.24"
default-features = false
features = ["png", "jpeg"]


[target.'cfg(target_arch = "wasm32")'.dependencies]
console_error_panic_hook = "0.1.6"
console_log = "1.0"
wgpu = { version = "0.17", features = ["webgl"]}
wasm-bindgen = "0.2"
wasm-bindgen-futures = "0.4.30"
web-sys = { version = "0.3", features = [
    "Document",
    "Window",
    "Element",
]}

[[bin]]
name = "raytracer_wgpu"
path = "src/main.rs"

[lib]
name = "raytracer_wgpu_lib"
path = "src/lib.rs"
crate-type = ["cdylib", "rlib"]

[build-dependencies]
anyhow = "1.0"
fs_extra = "1.2"
glob = "0.3"
